# amazing-skills

./: LICENSE  README.md
skills/browser-semantic-snapshot/: SKILL.md
skills/browser-semantic-snapshot/agents/: openai.yaml
skills/browser-semantic-snapshot/references/: auth-playbook.md  format-spec.md
skills/browser-semantic-snapshot/scripts/: render_semantic_snapshot_prompt.py
skills/handoff-your-work/: SKILL.md
skills/handoff-your-work/agents/: openai.yaml
skills/handoff-your-work/references/: handoff-quality-bar.md
skills/handoff-your-work/scripts/: render_handoff_template.py
skills/python-project-from-scratch/: SKILL.md
skills/python-project-from-scratch/agents/: openai.yaml
skills/python-project-from-scratch/assets/project-template/: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  pre-commit  project.spec  pyproject.toml
skills/python-project-from-scratch/assets/project-template/.agents/skills/python-unix-philosophy/: SKILL.md
skills/python-project-from-scratch/assets/project-template/.agents/skills/python-unix-philosophy/agents/: openai.yaml
skills/python-project-from-scratch/assets/project-template/.agents/skills/python-unix-philosophy/references/: unix-python-principles.md
skills/python-project-from-scratch/assets/project-template/.claude/skills/sync-self-explanatory-docs/: SKILL.md
skills/python-project-from-scratch/assets/project-template/.github/: PULL_REQUEST_TEMPLATE.md
skills/python-project-from-scratch/assets/project-template/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
skills/python-project-from-scratch/assets/project-template/.github/workflows/: ci.yml  release.yml
skills/python-project-from-scratch/assets/project-template/scripts/: add_trailing_comma_to_params.py  count_source_files.py
skills/python-project-from-scratch/assets/project-template/src/{{ package_name }}/: __main__.py
skills/python-project-from-scratch/assets/project-template/tests/: conftest.py  test_cli.py
skills/python-project-from-scratch/references/: configuration.md
skills/python-project-from-scratch/scripts/: render_project.py
skills/sync-self-explanatory-docs/agents/: openai.yaml
skills/sync-self-explanatory-docs/references/: self-explanatory-reference.md
skills/ui-aesthetic-best-practices/: SKILL.md
skills/ui-aesthetic-best-practices/agents/: openai.yaml
skills/ui-aesthetic-best-practices/references/: originality-quality-bar.md  resource-map.md  workflow.md
skills/ui-aesthetic-best-practices/scripts/: scaffold_design_system.py
(+17 files in other folders)
