[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ project_name }}"
version = "0.1.0"
description = "{{ project_description }}"
readme = "README.md"
requires-python = ">= {{ minimum_python_version }}"
license = { text = "MIT" }
authors = [
    { name = "{{ your_real_name }}", email = "{{ your_email }}" },
]
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: {{ minimum_python_version }}",
]
dependencies = [
    "colorama>=0.4.6,<1.0.0",
    "fastapi>=0.135.1,<1.0.0",
    "httpx>=0.28.1,<1.0.0",
    "litellm>=1.82.4,<2.0.0",
    "numpy>=2.4.3,<3.0.0",
    "pandas>=3.0.1,<4.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-settings>=2.13.1,<3.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "tiktoken>=0.12.0,<1.0.0",
    "uvicorn[standard]>=0.42.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/{{ your_github_username }}/{{ project_name }}"
Repository = "https://github.com/{{ your_github_username }}/{{ project_name }}"
Issues = "https://github.com/{{ your_github_username }}/{{ project_name }}/issues"

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "libcst>=1.8.6",
    "mypy>=1.19.1",
    "pre-commit>=4.3.0",
    "pyinstaller>=6.19.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
    "safety>=3.7.0",
]

[project.scripts]
{{ package_name }} = "{{ package_name }}.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ package_name }}"]

[tool.ruff]
line-length = 120
lint.select = [
    "D",
    "E",
    "F",
    "I",
    "UP",
]
lint.ignore = [
    "D103",
    "D104",
    "D107",
    "D212",
    "E501",
    "E741",
    "UP006",
    "UP007",
    "UP015",
    "UP035",
    "UP045",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
source = ["src"]
relative_files = true

[tool.coverage.report]
show_missing = true
skip_empty = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
]

[tool.coverage.xml]
output = "coverage.xml"
